chore: update VSCode extensions for improved development experience

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,6 +9,7 @@
     "davidanson.vscode-markdownlint",
     "dbaeumer.vscode-eslint",
     "redhat.vscode-xml",
+    "redhat.vscode-yaml",
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
     "foxundermoon.shell-format",
@@ -16,7 +17,7 @@
     "guapibai.nunjucks-prettier",
     "humao.rest-client",
     "irongeek.vscode-env",
-    "jgclark.vscode-todo-highlight",
+    "gruntfuggly.todo-tree",
     "streetsidesoftware.code-spell-checker-persian",
     "streetsidesoftware.code-spell-checker",
     "stylelint.vscode-stylelint",
