chore: update GitHub Copilot settings for code generation instructions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,10 +71,7 @@
     "vazirmatn",
     "windstyle"
   ],
-  "css.customData": [
-    ".vscode/tailwind.json"
-  ],
-  "github.copilot.chat.experimental.codeGeneration.instructions": [
+  "github.copilot.chat.codeGeneration.instructions": [
     {
       "file": ".github/copilot-instruction.md"
     }
